tests/baselines/reference/7.8.3-1gs.errors.txt
7.8.3-1gs.ts(14,9): error TS1121: Octal literals are not allowed. Use the syntax '0o10'.


==== 7.8.3-1gs.ts (1 errors) ====
    // Copyright (c) 2012 Ecma International.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    es5id: 7.8.3-1gs
    description: Strict Mode - octal extension(010) is forbidden in strict mode
    negative:
      phase: parse
      type: SyntaxError
    flags: [onlyStrict]
    ---*/
    
    
    var y = 010;
            ~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o10'.
    